<resources>
    <string name="app_name">Cidade Limpa</string>

    <string name="nome_app">Meio Ambiente!</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="remember">Remember</string>
    <string name="button_login">Login</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="msgError">User error</string>
    <string name="email">Email</string>
    <string name="dateNas">Date of birth</string>
    <string name="finalizeRegs">Finalize</string>
    <string name="welcome">Welcome,</string>
    <string name="accessMenu">Access menu</string>
    <string name="cryAccount">Cry you Account</string>
    <string name="textApp">Cidade Limpa focuses on the city environmental issues.</string>

    <string name="textApp2">The app aims to encourage the population to become more
participatory in the urban cleaning process, making the city cleaner and more sustainable.</string>

    <string name="nameEmpty">Please enter your name</string>
    <string name="emailEmpty">Please enter a valid email</string>
    <string name="passwordEmpty">Please enter a password</string>
    <string name="dateBirthEmpty">Please enter your date of birth</string>

    <string name="cadastroRealizado">Registration done</string>
    <string name="preenchaCampos">Fill in all fields</string>

    <string name="listItemUser">User:</string>

</resources>