<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tela_cadastro">

    <EditText
        android:id="@+id/edNome"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/login_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edNome"
        app:layout_constraintTop_toBottomOf="@+id/edNome" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/edDataNasc"
        app:mask="##/##/####"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/dateNas"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFinalize"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_button"
        android:text="@string/finalizeRegs"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edDataNasc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edDataNasc"
        app:layout_constraintTop_toBottomOf="@+id/edDataNasc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="270dp"
        android:layout_height="39dp"
        android:text="@string/cryAccount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="179dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@drawable/logo_app" />



</androidx.constraintlayout.widget.ConstraintLayout>